fixed image stretching in larger screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -216,6 +216,10 @@ h2 {
         margin-left: 0px;
     }
 
+    .exerciseimage1 {
+            height: 400px;
+        }
+
     main {
         margin-top: 64px;
     }
@@ -271,9 +275,10 @@ h2 {
         text-decoration: underline;
     }
 
-    #exerciseimage2 {
-    
+    .exerciseimage1 {
+    height: 500px;
     }
+
 
     
 }
